<resources>
    <string name="app_name">Atividade4</string>
    <string name="texto">Texto</string>
    <string name="tamFonte">Tamanho da letra:</string>
    <string name="tamFonteDP">sp</string>
    <string name="estilo">Estilo</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiuscula">Maiúscula</string>
    <string name="cor">Cor da letra</string>
    <string name="verde">Verde</string>
    <string name="vermelho">Vermelho</string>
    <string name="azul">Azul</string>
    <string name="preto">Preto</string>
</resources>